new file:   C3-Natural Language Processing with Sequence Models/Week 1/Gated Recurrent Units | Coursera.pdf 	modified:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb

--- a/C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb
+++ b/C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "0d736de0",
    "metadata": {
     "deletable": false,
@@ -952,19 +952,19 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Convert your data into a tensor using the given vocab\n",
-    "    all_ids = line_to_tensor(None, None)\n",
+    "    all_ids = line_to_tensor(single_line_data, vocab)\n",
     "    # Create a TensorFlow dataset from the data tensor\n",
-    "    ids_dataset = tf.data.Dataset.from_tensor_slices(None)\n",
+    "    ids_dataset = tf.data.Dataset.from_tensor_slices(all_ids)\n",
     "    # Create a batch dataset\n",
     "    data_generator = ids_dataset.batch(seq_length + 1, drop_remainder=True) \n",
     "    # Map each input sample using the split_input_target function\n",
-    "    dataset_xy = data_generator.map(None)\n",
+    "    dataset_xy = data_generator.map(lambda x: split_input_target(x))\n",
     "    \n",
     "    # Assemble the final dataset with shuffling, batching, and prefetching\n",
     "    dataset = (                                   \n",
     "        dataset_xy                                \n",
-    "        .shuffle(None)\n",
-    "        .batch(None, drop_remainder=True)\n",
+    "        .shuffle(BUFFER_SIZE)\n",
+    "        .batch(batch_size, drop_remainder=True)\n",
     "        .prefetch(tf.data.experimental.AUTOTUNE)  \n",
     "        )            \n",
     "                                     \n",
@@ -975,13 +975,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8b4821f2",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prints the elements into a single batch. The batch contains 2 elements: \n",
+      "\n",
+      "\u001b[94mInput0\t: b'and sight distra'\n",
+      "\n",
+      "\u001b[93mTarget0\t: b'nd sight distrac'\n",
+      "\n",
+      "\n",
+      "\u001b[94mInput1\t: b'when in his fair'\n",
+      "\n",
+      "\u001b[93mTarget1\t: b'hen in his fair '\n"
+     ]
+    }
+   ],
    "source": [
     "# test your function\n",
     "tf.random.set_seed(1)\n",
@@ -1020,13 +1037,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "dd6f62af-c739-4001-9cd9-5e606478bf61",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[92mAll test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# UNIT TEST\n",
     "w1_unittest.test_create_batch_dataset(create_batch_dataset)"
