modified:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb

--- a/C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb
+++ b/C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b4d4f89f",
    "metadata": {
     "deletable": false,
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "37306da8",
    "metadata": {
     "colab": {},
@@ -1157,11 +1157,11 @@
     "        ### START CODE HERE ###\n",
     "\n",
     "        # Create an embedding layer to map token indices to embedding vectors\n",
-    "        self.embedding = None\n",
+    "        self.embedding = tf.keras.layers.Embedding(vocab_size, embedding_dim)\n",
     "        # Define a GRU (Gated Recurrent Unit) layer for sequence modeling\n",
-    "        self.gru = None\n",
+    "        self.gru = tf.keras.layers.GRU(units=rnn_units,return_sequences=True,return_state=True)\n",
     "        # Apply a dense layer with log-softmax activation to predict next tokens\n",
-    "        self.dense = None\n",
+    "        self.dense = tf.keras.layers.Dense(units=vocab_size,activation=tf.nn.log_softmax)\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "    \n",
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "97558190",
    "metadata": {
     "deletable": false,
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "facb51a7",
    "metadata": {
     "colab": {
@@ -1232,7 +1232,30 @@
     "id": "kvQ_jf52-JAn",
     "outputId": "9d13c577-f89d-427a-8944-a00ca57a4f2c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"grulm_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding_1 (Embedding)     (None, 100, 256)          20992     \n",
+      "                                                                 \n",
+      " gru (GRU)                   [(None, 100, 512),        1182720   \n",
+      "                              (None, 512)]                       \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 100, 82)           42066     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1245778 (4.75 MB)\n",
+      "Trainable params: 1245778 (4.75 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# testing your model\n",
     "\n",
@@ -1278,13 +1301,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "2fb84614-5707-41c1-889c-03bc461a8c49",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test case 1:\n",
+      "\u001b[32mAll tests passed!\u001b[0m\n",
+      "Test case 2:\n",
+      "\u001b[32mAll tests passed!\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# UNIT TEST\n",
     "w1_unittest.test_GRULM(GRULM)"
