modified:   .DS_Store 	modified:   C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb

--- a/C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb
+++ b/C3-Natural Language Processing with Sequence Models/Week 1/Python Notebooks/C3W1_Assignment.ipynb
@@ -1334,13 +1334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "cbf5745e",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input:  [73 62 55 66 74  4 62 69 66 58  4 74 62 59  4 69 70 63 68 63 69 68  4 69\n",
+      " 60  4 42 79 74 62 55 61 69 72 55 73  4 59 72 59  4 35  4 77 63 66 66  3\n",
+      " 55 66 66 69 77  4 69 60  4 74 62 79  4 77 63 74 73 11  4 55 68 58  4 60\n",
+      " 59 55 72  4 74 69  4 65 63 66 66  4 55  4 77 69 69 58 57 69 57 65 11  4\n",
+      " 66 59 73 74]\n",
+      "\n",
+      " (1, 100, 82) # (batch_size, sequence_length, vocab_size)\n"
+     ]
+    }
+   ],
    "source": [
     "for input_example_batch, target_example_batch in dataset.take(1):\n",
     "    print(\"Input: \", input_example_batch[0].numpy()) # Lets use only the first sequence on the batch\n",
@@ -1358,13 +1372,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "7df09c7b",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-4.394292 , -4.40476  , -4.412511 , -4.3860574, -4.4002004,\n",
+       "       -4.406017 , -4.391721 , -4.412148 , -4.398938 , -4.409028 ,\n",
+       "       -4.4036393, -4.4032044, -4.412924 , -4.4294558, -4.4058275,\n",
+       "       -4.42735  , -4.4058037, -4.3803573, -4.400791 , -4.400802 ,\n",
+       "       -4.406753 , -4.3941684, -4.3932967, -4.4120283, -4.387955 ,\n",
+       "       -4.401387 , -4.409998 , -4.3959923, -4.3911653, -4.3927126,\n",
+       "       -4.418993 , -4.3965154, -4.4084926, -4.411369 , -4.3952107,\n",
+       "       -4.4010906, -4.3987713, -4.438392 , -4.395659 , -4.382313 ,\n",
+       "       -4.41321  , -4.3956714, -4.407373 , -4.4170127, -4.4092526,\n",
+       "       -4.3940024, -4.412472 , -4.4142866, -4.4282956, -4.4088607,\n",
+       "       -4.4279985, -4.412727 , -4.4195285, -4.4102244, -4.3989367,\n",
+       "       -4.4095216, -4.4144945, -4.3992176, -4.413693 , -4.400564 ,\n",
+       "       -4.4158244, -4.428811 , -4.41504  , -4.419681 , -4.416288 ,\n",
+       "       -4.4038076, -4.423907 , -4.413642 , -4.394232 , -4.419655 ,\n",
+       "       -4.4194393, -4.425377 , -4.40321  , -4.3787003, -4.411811 ,\n",
+       "       -4.386497 , -4.405401 , -4.3831735, -4.40585  , -4.428001 ,\n",
+       "       -4.410224 , -4.4233975], dtype=float32)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "example_batch_predictions[0][99].numpy()"
    ]
@@ -1379,13 +1420,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "90eae11a",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n"
+     ]
+    }
+   ],
    "source": [
     "last_character = tf.math.argmax(example_batch_predictions[0][99])\n",
     "print(last_character.numpy())"
@@ -1401,13 +1450,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6e62ea06",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21 27 71 12 73 41  6 75 75 48 72 77  6  6 41 75  4  3 28 28  3 14 18 75\n",
+      " 65 41 29 29 73  6 71  6 14 14 23 36 41 41 73 44 41 73 41 41 22 75  8 28\n",
+      " 25 12 12 75  5 41 75 74 41 29  6  6 41 41 22 77  3 17 54 41 50 48 41 29\n",
+      " 65 41 73 41 73 75 54  5  1 75  8 12 41 41 41 75 75 48 29 14 45  5 54 54\n",
+      " 12 70 21 73]\n"
+     ]
+    }
+   ],
    "source": [
     "sampled_indices = tf.math.argmax(example_batch_predictions[0], axis=1)\n",
     "print(sampled_indices.numpy())"
@@ -1423,13 +1484,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "ff501624",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input:\n",
+      " tf.Tensor(b'shalt hold the opinion of Pythagoras ere I will\\nallow of thy wits, and fear to kill a woodcock, lest', shape=(), dtype=string)\n",
+      "\n",
+      "Next Char Predictions:\n",
+      " tf.Tensor(b\"7Aq-sO$uuVrw$$Ou \\nBB\\n04ukOCCs$q$009JOOsROsOO8u'B;--u!OutOC$$OO8w\\n3]OXVOCkOsOsu]!u'-OOOuuVC0S!]]-p7s\", shape=(), dtype=string)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Input:\\n\", text_from_ids(input_example_batch[0], vocab))\n",
     "print()\n",
@@ -1469,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "5c2948bb",
    "metadata": {
     "deletable": false,
@@ -1493,11 +1566,11 @@
     "    ### START CODE HERE ###\n",
     "\n",
     "    # Define the loss function. Use SparseCategoricalCrossentropy \n",
-    "    loss = None\n",
-    "    # Define and Adam optimizer\n",
-    "    opt = None\n",
+    "    loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "    # Define an Adam optimizer\n",
+    "    opt = tf.keras.optimizers.Adam(learning_rate=0.00125)\n",
     "    # Compile the model using the parametrized Adam optimizer and the SparseCategoricalCrossentropy funcion\n",
-    "    model.compile(optimizer=None, loss=None)\n",
+    "    model.compile(optimizer=opt, loss=loss)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1506,13 +1579,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "2a675872",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[92mAll test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "## UNIT TEST\n",
     "w1_unittest.test_compile_model(compile_model)"
@@ -1528,13 +1610,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "343ab5e2",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "790/790 [==============================] - 14s 14ms/step - loss: 2.0145\n",
+      "Epoch 2/10\n",
+      "790/790 [==============================] - 11s 12ms/step - loss: 1.4798\n",
+      "Epoch 3/10\n",
+      "790/790 [==============================] - 11s 12ms/step - loss: 1.3790\n",
+      "Epoch 4/10\n",
+      "790/790 [==============================] - 10s 12ms/step - loss: 1.3326\n",
+      "Epoch 5/10\n",
+      "790/790 [==============================] - 11s 12ms/step - loss: 1.3032\n",
+      "Epoch 6/10\n",
+      "790/790 [==============================] - 10s 11ms/step - loss: 1.2819\n",
+      "Epoch 7/10\n",
+      "790/790 [==============================] - 10s 12ms/step - loss: 1.2656\n",
+      "Epoch 8/10\n",
+      "790/790 [==============================] - 10s 12ms/step - loss: 1.2518\n",
+      "Epoch 9/10\n",
+      "790/790 [==============================] - 10s 11ms/step - loss: 1.2406\n",
+      "Epoch 10/10\n",
+      "790/790 [==============================] - 11s 12ms/step - loss: 1.2311\n"
+     ]
+    }
+   ],
    "source": [
     "EPOCHS = 10\n",
     "\n",
@@ -1554,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "30c3ead1",
    "metadata": {
     "colab": {
@@ -1568,15 +1677,15 @@
    },
    "outputs": [],
    "source": [
-    "# # If you want, you can save the final model. Here is deactivated.\n",
-    "# output_dir = './your-model/'\n",
+    "# If you want, you can save the final model. Here is deactivated.\n",
+    "output_dir = './your-model/'\n",
     "\n",
-    "# try:\n",
-    "#     shutil.rmtree(output_dir)\n",
-    "# except OSError as e:\n",
-    "#     pass\n",
+    "try:\n",
+    "    shutil.rmtree(output_dir)\n",
+    "except OSError as e:\n",
+    "    pass\n",
     "\n",
-    "# model.save_weights(output_dir)"
+    "model.save_weights(output_dir)"
    ]
   },
   {
@@ -1637,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "d31ed99d",
    "metadata": {
     "colab": {},
@@ -1666,15 +1775,19 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Calculate log probabilities for predictions using one-hot encoding\n",
-    "    log_p = np.sum(None * None, axis= -1) # HINT: tf.one_hot() should replace one of the Nones\n",
+    "    log_p = np.sum(preds * tf.one_hot(target,preds.shape[-1]),axis= -1) # HINT: tf.one_hot() should replace one of the Nones\n",
+    "   \n",
     "    # Identify non-padding elements in the target\n",
-    "    non_pad = 1.0 - np.equal(None, None)          # You should check if the target equals to PADDING_ID\n",
+    "    non_pad = 1.0 - np.equal(target, PADDING_ID)          # You should check if the target equals to PADDING_ID\n",
+    "    \n",
     "    # Apply non-padding mask to log probabilities to exclude padding\n",
-    "    log_p = None * None                             # Get rid of the padding\n",
+    "    log_p = log_p * non_pad                     # Get rid of the padding\n",
+    "    \n",
     "    # Calculate the log perplexity by taking the sum of log probabilities and dividing by the sum of non-padding elements\n",
-    "    log_ppx = np.sum(None, None) / np.sum(None, None) # Remember to set the axis properly when summing up\n",
+    "    log_ppx = np.sum(log_p,axis=0) / np.sum(non_pad,axis=0) # Remember to set the axis properly when summing up\n",
+    "    \n",
     "    # Compute the mean of log perplexity\n",
-    "    log_ppx = np.mean(None) # Compute the mean of the previous expression\n",
+    "    log_ppx = np.mean(log_ppx) # Compute the mean of the previous expression\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    return -log_ppx"
@@ -1682,13 +1795,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
+   "id": "c5156d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(1, 5, 3), dtype=float32, numpy=\n",
+       " array([[[0.1, 0.3, 0.7],\n",
+       "         [0.1, 0.3, 0.7],\n",
+       "         [0.1, 0.3, 0.7],\n",
+       "         [0.1, 0.3, 0.7],\n",
+       "         [0.1, 0.3, 0.7]]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(1, 5), dtype=int32, numpy=array([[2, 2, 2, 2, 2]], dtype=int32)>)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_dict = {\"name\": \"example 1\",\n",
+    "    \"input\": {\n",
+    "        \"preds\": tf.constant([[[0.1, 0.3, 0.7],\n",
+    "                                [0.1, 0.3, 0.7],\n",
+    "                                       [0.1, 0.3, 0.7],\n",
+    "                                       [0.1, 0.3, 0.7],\n",
+    "                                       [0.1, 0.3, 0.7]]]),\n",
+    "        \"target\": tf.constant([[2, 2, 2, 2, 2]]),\n",
+    "    },\n",
+    "        \"expected\": -0.699999988079071}\n",
+    "            \n",
+    "preds = test_dict[\"input\"][\"preds\"]\n",
+    "target = test_dict[\"input\"][\"target\"]\n",
+    "preds, target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "79f20299",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.7, 0.7, 0.7, 0.7, 0.7]], dtype=float32)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PADDING_ID = 1\n",
+    "tf.one_hot(target,preds.shape[-1])\n",
+    "log_p = np.sum(preds * tf.one_hot(target,preds.shape[-1]),axis= -1)\n",
+    "log_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "07d8306c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "non_pad = 1.0 - np.equal(target, PADDING_ID) \n",
+    "non_pad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "5ba0b97c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.69999999, 0.69999999, 0.69999999, 0.69999999, 0.69999999]])"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_p = log_p * non_pad \n",
+    "log_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "dfaa560a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.69999999, 0.69999999, 0.69999999, 0.69999999, 0.69999999])"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_ppx = np.sum(log_p,axis=0) / np.sum(non_pad,axis=0)\n",
+    "log_ppx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "4900b6ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.699999988079071"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_ppx = np.mean(log_ppx)\n",
+    "log_ppx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "id": "9d88193e",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Fail in example 5. Expected -1.0 but got nan",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[126], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#UNIT TESTS\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mw1_unittest\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest_test_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlog_perplexity\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/tf/w1_unittest.py:308\u001b[0m, in \u001b[0;36mtest_test_model\u001b[0;34m(target)\u001b[0m\n\u001b[1;32m    306\u001b[0m         \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39misnan(output), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFail in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtesti[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Expected \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexpected\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m but got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 308\u001b[0m         \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(output, expected), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFail in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtesti[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Expected \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexpected\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m but got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    310\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\033\u001b[39;00m\u001b[38;5;124m[92mAll test passed!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Fail in example 5. Expected -1.0 but got nan"
+     ]
+    }
+   ],
    "source": [
     "#UNIT TESTS\n",
     "w1_unittest.test_test_model(log_perplexity)"
