modified:   .DS_Store 	modified:   C3-Natural Language Processing with Sequence Models/.DS_Store 	modified:   C3-Natural Language Processing with Sequence Models/Week 2/.DS_Store 	modified:   C3-Natural Language Processing with Sequence Models/Week 2/Python Notebooks/C3W2_Assignment.ipynb

--- a/C3-Natural Language Processing with Sequence Models/Week 2/Python Notebooks/C3W2_Assignment.ipynb
+++ b/C3-Natural Language Processing with Sequence Models/Week 2/Python Notebooks/C3W2_Assignment.ipynb
@@ -407,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 36 calls to <function PreprocessingLayer.make_adapt_function.<locals>.adapt_step at 0x7fe7f3c524c0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:5 out of the last 36 calls to <function PreprocessingLayer.make_adapt_function.<locals>.adapt_step at 0x7fc77f0fa430> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     }
    ],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "0a0a6532",
    "metadata": {
     "deletable": false,
@@ -673,7 +673,7 @@
     "        label_ids.append(element_ids)\n",
     "        \n",
     "    # Pad the elements\n",
-    "    label_ids = tf.keras.utils.pad_sequences(label_ids,padding='post')\n",
+    "    label_ids = tf.keras.utils.pad_sequences(label_ids,padding='post',value=-1)\n",
     "    \n",
     "    ### END CODE HERE ### \n",
     "\n",
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "02l23421",
    "metadata": {
     "deletable": false
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "de64e07c",
    "metadata": {
     "deletable": false,
@@ -734,13 +734,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrong output. Please review your code. Remember to pass the argument padding = 'post'.\n",
-      "\tExpected: [[ 1  1  1  1  1  1  1  1  1]\n",
-      " [ 1  1  2 -1 -1 -1 -1 -1 -1]].\n",
-      "\t Got: [[1 1 1 1 1 1 1 1 1]\n",
-      " [1 1 2 0 0 0 0 0 0]].\n",
-      "\u001b[92m 2  Tests passed\n",
-      "\u001b[91m 1  Tests failed\n"
+      "\u001b[92m All tests passed\n"
      ]
     }
    ],
@@ -762,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "303db421",
    "metadata": {
     "deletable": false,
@@ -788,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bc31ffcc",
    "metadata": {
     "deletable": false,
@@ -804,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a2a0c9e1",
    "metadata": {
     "colab": {
@@ -818,7 +812,33 @@
     "outputId": "db098ed6-4351-41f7-cfdb-e45dd3798ebf",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of outputs is 17\n",
+      "Num of vocabulary words in the training set: 29847\n",
+      "The training size is 33570\n",
+      "The validation size is 7194\n",
+      "An example of the first sentence is\n",
+      "\t [1046    6 1121   18 1832  232  543    7  528    2  158    5   60    9\n",
+      "  648    2  922    6  192   87   22   16   54    3    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0]\n",
+      "An example of its corresponding label is\n",
+      "\t [16 16 16 16 16 16  2 16 16 16 16 16  2 16 16 16 16 16  3 16 16 16 16 16\n",
+      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
+      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
+      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
+      " -1 -1 -1 -1 -1 -1 -1 -1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exploring information about the training data\n",
     "print(f'The number of outputs is {len(tags)}')\n",
